# ruhmi-framework-rzg

./: LICENSE.md  README.md  requirements-host.txt
application_examples/: README.md  READMEmd
application_examples/face_detection/: README.md
application_examples/face_detection/exe/model_yolo-fastest/: config.yaml
application_examples/face_detection/exe/model_yolo-fastest/yolo-fastest_192_face_v4/model/: input_desc.json
application_examples/face_detection/src/: CMakeLists.txt  MeraRuntimeEthosWrapper.cpp  box.cpp  box.h  define.h  image.cpp  image.h  main.cpp  rt.h  wayland.cpp  wayland.h
application_examples/face_detection/src/mera2_runtime_plan/: plan.h
application_examples/image_classification/: README.md
application_examples/image_classification/exe/model_movilenetv1/: config.yaml
application_examples/image_classification/exe/model_movilenetv1/mobilenet_v1_0.25/model/: input_desc.json
application_examples/image_classification/src/: CMakeLists.txt  MeraRuntimeEthosWrapper.h  define.h  main.cpp  mera_runtime.h  wayland.cpp  wayland.h
application_examples/image_classification/src/mera2_runtime_plan/: plan_io.h
docs/: README.md  dockerfile.md  generate-model-data.md
install/: mera-2.5.0+pkg.3782-cp310-cp310-manylinux_2_27_x86_64.whl  mera-2.5.0+rzg3e.21-cp312-cp312-manylinux_2_27_aarch64.whl  mera-2.5.0+rzg3e.24-cp312-cp312-manylinux_2_27_aarch64.whl  mera2_runtime-2.5.0+rzg3e.21-cp312-cp312-manylinux_2_27_aarch64.whl  mera2_runtime-2.5.0+rzg3e.24-cp312-cp312-manylinux_2_27_aarch64.whl  readme.md
scripts/: Dockerfile  README.md  deploy.py  gen_ref_data.py  generate-model-data.py
